# andromeda

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  andromeda.py  build.py  build_tasks.py  cache.sqlite  config.ini  core.py  environment.yml  ht_model.py  linux_environment.yml  main.py  mkdocs.yml  model.py  pyproject.toml  requirements.txt  setup.py  start.py  state.py  train.py  utils.py
.github/workflows/: build.yml  conda-build.yml  macos_release.yml  macos_test.yml  test_build.yml  test_release.yml  ubuntu_release.yml  ubuntu_test.yml  windows_release.yml  windows_test.yml
andromeda/: model.py  utils.py
andromeda-latest/: config.json  tokenizer.json  tokenizer_config.json
docs/: contributing.md  index.md  installation.md  mkdocs.yml  model.md  quickstart.md
docs/docs/: installation.md  overview.md
tests/: test_build.py  test_model.py  test_release.py
