[tool.poetry]
name = "andromeda-nlp"
version = "1.0.1"
description = "Easy longform text generation."
authors = ["mchaney-dev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.3.1"
happytransformer = "^3.0.0"
DateTime = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
